# pharmaai

./: LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
logs/2025-06-02T17_47/: Pharmaai_crew.json  raw.txt
logs/2025-06-02T18_03/: Pharmaai_crew.json  json_output.json  raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-02T18_25/: Pharmaai_crew.json  raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-02T21_23/: Pharmaai_crew.json  raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-03T08_35/: Pharmaai_crew.json  json_output.json  raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-03T10_16/: raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-03T10_54/: output.md  tasks_output.txt  token_usage.txt
logs/2025-06-05T11_01/: raw.md  tasks_output.txt  token_usage.txt
logs/2025-06-05T11_21/: raw.md  tasks_output.txt  token_usage.txt
logs/2025-06-07T10_17/: raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-07T12_15/: raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-07T13_23/: raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-09T19_27/: json_output.json  raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-11T14_23/: raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-11T15_06/: raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-11T15_54/: json_output.json  raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-11T16_41/: json_output.json  raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-11T17_32/: raw.txt  tasks_output.txt  token_usage.txt
logs/2025-06-11T17_50/: raw.txt  (+2 more)
(+185 files in other folders)
