[project]
name = "pharmaai"
version = "0.1.0"
description = "PharmaAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
pharmaai = "pharmaai.main:run"
run_crew = "pharmaai.main:run"
train = "pharmaai.main:train"
replay = "pharmaai.main:replay"
test = "pharmaai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
